--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>This is a thoughts landing page</h1>
+    <section class="container">
+        <div class="box1">
+            <p>Thoughts 1</p>
+            <button>Expand</button>
+        </div>
+        <div class="box2">
+            <p>Thoughts 2</p>
+            <button>Expand</button>
+        </div>
+    </section>
 </body>
 </html>
