--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <section class="container">
         <div class="box1">
             <p>Thoughts 1</p>
-            <button>Expand</button>
+            <button class="btn">Expand</button>
         </div>
         <div class="box2">
             <p>Thoughts 2</p>
-            <button>Expand</button>
+            <button class="btn">Expand</button>
         </div>
     </section>
 </body>
