--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <section class="container">
         <div class="box1">
             <p>Thoughts 1</p>
-            <button class="btn">Expand</button>
+            <button class="btn" onclick="expand1()">Expand</button>
         </div>
         <div class="box2">
             <p>Thoughts 2</p>
-            <button class="btn">Expand</button>
+            <button class="btn" onclick="expand2()">Expand</button>
         </div>
     </section>
+
+
+    <!-- JavaScript -->
+     <script src="./expand1.js"></script>
 </body>
 </html>
