add: expand1 function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <section class="container">
         <div class="box1">
             <p>Thoughts 1</p>
-            <button class="btn" onclick="expand1()">Expand</button>
+            <button class="btn" onclick="expand1()" id="btn-el">Expand</button>
+            <p id="message-el"></p>
         </div>
         <div class="box2">
             <p>Thoughts 2</p>
