--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         </div>
         <div class="box2">
             <p>Thoughts 2</p>
-            <button class="btn" onclick="expand2()">Expand</button>
+            <button class="btn" onclick="expand2()" id="btn-el2">Expand</button>
         </div>
     </section>
 
 
     <!-- JavaScript -->
      <script src="./expand1.js"></script>
+     <script src="./expand2.js"></script>
 </body>
 </html>
