add: expand function 2 added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="box2">
             <p>Thoughts 2</p>
             <button class="btn" onclick="expand2()" id="btn-el2">Expand</button>
+            <p id="message-el2"></p>
         </div>
     </section>
 
